// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`order.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type Foo = {
  // a
  alpha: 'hello',

  // b
  [key: string]: void,
  // c

  beta: 10,

  // d
}

=====================================output=====================================
type Foo = {
  // a
  alpha: "hello",

  // b
  [key: string]: void,
  // c

  beta: 10

  // d
};

================================================================================
`;

exports[`order.js 2`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
type Foo = {
  // a
  alpha: 'hello',

  // b
  [key: string]: void,
  // c

  beta: 10,

  // d
}

=====================================output=====================================
type Foo = {
  // a
  alpha: "hello",

  // b
  [key: string]: void,
  // c

  beta: 10,

  // d
};

================================================================================
`;
